--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"postcss": "^8.4.22",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"prisma": "^4.13.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.3.1",
@@ -33,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "^4.13.0",
 		"@vercel/analytics": "^1.0.0",
 		"stripe": "^12.1.1",
 		"twilio": "^4.10.0"
